[gd_scene load_steps=25 format=3 uid="uid://bebj6ltb2dusn"]

[ext_resource type="PackedScene" uid="uid://do6s602x65ika" path="res://battle/ui/battle_ui.tscn" id="1_156m4"]
[ext_resource type="PackedScene" uid="uid://v65sweb65wh" path="res://card/card_slot/cardslot.tscn" id="2_pll4o"]
[ext_resource type="PackedScene" uid="uid://bvlk5m8v5p4ut" path="res://battle/ui/pot_ui.tscn" id="2_pyfix"]
[ext_resource type="Theme" uid="uid://nhnax5rta2hu" path="res://custom_resources/amarante.tres" id="4_e48mi"]
[ext_resource type="Script" uid="uid://bty8228mbp4mr" path="res://battle/deck.gd" id="6_oiw7q"]
[ext_resource type="Script" uid="uid://cn2nfmdik6f0v" path="res://global/player/input_manager.gd" id="7_fisqk"]
[ext_resource type="PackedScene" uid="uid://dq042lqhdg00i" path="res://menus/pause_menu.tscn" id="7_n5ix6"]
[ext_resource type="Script" uid="uid://pr1np1molltl" path="res://battle/battle_manager.gd" id="9_agsc7"]
[ext_resource type="Theme" uid="uid://2j3rac34a6bb" path="res://custom_resources/player_cover.tres" id="11_as1q7"]
[ext_resource type="Script" uid="uid://waqufgaxshwe" path="res://card/monster_card/cooking_mechanic.gd" id="11_fisqk"]
[ext_resource type="Script" uid="uid://dbpol38hmfa5t" path="res://card/card_manager/ingredient_card_manager.gd" id="11_icoan"]
[ext_resource type="Script" uid="uid://cre1c46xv5h0x" path="res://battle/ui/player_hand_ui.gd" id="12_2t7ue"]
[ext_resource type="Script" uid="uid://cm5fblon3lnjk" path="res://card/card_manager/monster_card_manager.gd" id="12_icoan"]
[ext_resource type="Theme" uid="uid://bmdwt0d0lr5sn" path="res://custom_resources/button.tres" id="13_ju8jl"]
[ext_resource type="Theme" uid="uid://dj0a2u4psddf6" path="res://custom_resources/player_health_bg.tres" id="14_7njrs"]
[ext_resource type="Texture2D" uid="uid://itcaahwu7iiu" path="res://art/icons/cooking_icon.png" id="14_xmbur"]
[ext_resource type="Texture2D" uid="uid://bvh72by4c4tg1" path="res://art/icons/recipe_icon.png" id="15_as1q7"]
[ext_resource type="PackedScene" uid="uid://cddrlenmm4hcd" path="res://battle/ui/recipe_book.tscn" id="15_n6gaa"]
[ext_resource type="PackedScene" uid="uid://dhand73cgok5l" path="res://battle/ui/card_info.tscn" id="16_220ih"]
[ext_resource type="PackedScene" uid="uid://b566xs2vmuxjj" path="res://card/target_selection/card_target_selector.tscn" id="16_tnndc"]
[ext_resource type="Script" uid="uid://bposbq16v10av" path="res://battle/on_level_start.gd" id="17_k6ux7"]
[ext_resource type="PackedScene" uid="uid://b8daicbe0q3hy" path="res://battle/ui/player_health.tscn" id="18_as1q7"]
[ext_resource type="PackedScene" uid="uid://bygysgvppteqj" path="res://menus/reward.tscn" id="21_ju8jl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmbur"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 9
border_color = Color(0.945098, 0.760784, 0.196078, 1)
expand_margin_bottom = 2.0

[node name="Battle" type="Node2D"]

[node name="Player" type="Node2D" parent="."]

[node name="InputManager" type="Node2D" parent="Player" node_paths=PackedStringArray("card_manager_reference", "ingredient_card_manager")]
script = ExtResource("7_fisqk")
card_manager_reference = NodePath("../../PlayerHand/MonsterCardManager")
ingredient_card_manager = NodePath("../../PlayerHand/IngredientCardManager")

[node name="PlayerHand" type="Node2D" parent="."]

[node name="Deck" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("deck_left_num_text", "ingredient_card_manager")]
z_index = 8
position = Vector2(888, 538)
script = ExtResource("6_oiw7q")
deck_left_num_text = NodePath("DeckLeftNum")
ingredient_card_manager = NodePath("../IngredientCardManager")

[node name="DeckImage" type="Panel" parent="PlayerHand/Deck"]
offset_left = -22.0
offset_top = -52.0
offset_right = 46.0
offset_bottom = 49.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xmbur")

[node name="DeckMiddle" type="ColorRect" parent="PlayerHand/Deck/DeckImage"]
modulate = Color(0.972613, 0.790405, 0.253099, 1)
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 56.0
offset_bottom = 86.0

[node name="DeckDepth" type="Control" parent="PlayerHand/Deck/DeckImage"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeckDepth_1" type="ColorRect" parent="PlayerHand/Deck/DeckImage/DeckDepth"]
layout_mode = 0
offset_left = 2.0
offset_top = 95.0
offset_right = 66.0
offset_bottom = 95.6

[node name="DeckDepth_2" type="ColorRect" parent="PlayerHand/Deck/DeckImage/DeckDepth"]
layout_mode = 0
offset_left = 2.0
offset_top = 97.0
offset_right = 66.0
offset_bottom = 97.6

[node name="DeckDepth_3" type="ColorRect" parent="PlayerHand/Deck/DeckImage/DeckDepth"]
layout_mode = 0
offset_left = 2.0
offset_top = 99.0
offset_right = 66.0
offset_bottom = 99.6

[node name="DeckDepth_4" type="ColorRect" parent="PlayerHand/Deck/DeckImage/DeckDepth"]
layout_mode = 0
offset_left = 2.0
offset_top = 101.0
offset_right = 66.0
offset_bottom = 101.6

[node name="DeckLeftNum" type="RichTextLabel" parent="PlayerHand/Deck"]
z_index = 2
offset_left = -14.0
offset_top = -31.0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("4_e48mi")
theme_override_font_sizes/normal_font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonsterCardManager" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("input_manager", "battle_manager", "temp_ui", "player_hand_cover")]
z_index = 7
script = ExtResource("12_icoan")
input_manager = NodePath("../../Player/InputManager")
battle_manager = NodePath("../../BattleManager")
temp_ui = NodePath("../../UI")
player_hand_cover = NodePath("../../UI/BackgroundCovers/PlayerHandCover")

[node name="IngredientCardManager" type="Node2D" parent="PlayerHand" node_paths=PackedStringArray("deck", "temp_ui", "player_hand_cover")]
z_index = 1
script = ExtResource("11_icoan")
deck = NodePath("../Deck")
temp_ui = NodePath("../../UI")
player_hand_cover = NodePath("../../UI/BackgroundCovers/PlayerHandCover")

[node name="BattleField" type="Node2D" parent="."]

[node name="Cardslots" type="Node2D" parent="BattleField"]
z_index = 1

[node name="Cardslot1" parent="BattleField/Cardslots" instance=ExtResource("2_pll4o")]
position = Vector2(252, 236)
card_slot_number = "cardslot1"

[node name="Cardslot2" parent="BattleField/Cardslots" instance=ExtResource("2_pll4o")]
position = Vector2(110, 321)
card_slot_number = "cardslot2"

[node name="Cardslot3" parent="BattleField/Cardslots" instance=ExtResource("2_pll4o")]
position = Vector2(110, 141)
card_slot_number = "cardslot3"

[node name="Enemy" type="Node2D" parent="BattleField"]
position = Vector2(820, 220)

[node name="BattleManager" type="Node2D" parent="." node_paths=PackedStringArray("enemy")]
script = ExtResource("9_agsc7")
enemy = NodePath("../BattleField/Enemy")

[node name="BattleTimer" type="Timer" parent="BattleManager"]
one_shot = true

[node name="CookingMechanic" type="Node2D" parent="." node_paths=PackedStringArray("battle_manager", "monster_card_manager", "pot_ui")]
script = ExtResource("11_fisqk")
battle_manager = NodePath("../BattleManager")
monster_card_manager = NodePath("../PlayerHand/MonsterCardManager")
pot_ui = NodePath("../UI/PotUi")

[node name="CardTargetSelector" parent="." node_paths=PackedStringArray("input_manager") instance=ExtResource("16_tnndc")]
input_manager = NodePath("../Player/InputManager")

[node name="UI" type="Control" parent="."]
z_index = -10
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 600.0
pivot_offset = Vector2(480, 300)
mouse_filter = 2

[node name="BackgroundCovers" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerHandCover" type="Panel" parent="UI/BackgroundCovers"]
z_index = 1
layout_mode = 0
offset_left = 206.0
offset_top = 445.0
offset_right = 832.0
offset_bottom = 600.0
mouse_filter = 2
theme = ExtResource("11_as1q7")

[node name="PotUICover" type="Panel" parent="UI/BackgroundCovers"]
z_index = 1
layout_mode = 0
offset_left = 2.0
offset_top = 445.0
offset_right = 196.0
offset_bottom = 600.0
mouse_filter = 2
theme = ExtResource("11_as1q7")

[node name="BattleUI" parent="UI" instance=ExtResource("1_156m4")]
layout_mode = 1

[node name="PlayerHandUI" type="Control" parent="UI" node_paths=PackedStringArray("ingredient_num_text", "monster_num_text")]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_2t7ue")
ingredient_num_text = NodePath("IngredientCardNum")
monster_num_text = NodePath("MonsterCardNum")

[node name="IngredientCardNum" type="RichTextLabel" parent="UI/PlayerHandUI"]
layout_mode = 0
offset_left = 631.0
offset_top = 451.0
offset_right = 826.0
offset_bottom = 478.0
theme = ExtResource("4_e48mi")
theme_override_font_sizes/normal_font_size = 13
text = "0 / 6 ingredients"
horizontal_alignment = 2

[node name="MonsterCardNum" type="RichTextLabel" parent="UI/PlayerHandUI"]
layout_mode = 0
offset_left = 631.0
offset_top = 571.0
offset_right = 826.0
offset_bottom = 598.0
theme = ExtResource("4_e48mi")
theme_override_font_sizes/normal_font_size = 13
text = "0 / 4 monsters"
horizontal_alignment = 2
vertical_alignment = 2

[node name="PotUi" parent="UI" node_paths=PackedStringArray("cooking_mechanics") instance=ExtResource("2_pyfix")]
layout_mode = 1
cooking_mechanics = NodePath("../../CookingMechanic")

[node name="PlayerHealth" parent="UI" instance=ExtResource("18_as1q7")]
layout_mode = 1

[node name="PlayerHealthBg" type="Panel" parent="UI/PlayerHealth"]
show_behind_parent = true
layout_mode = 0
offset_right = 410.0
offset_bottom = 43.0
mouse_filter = 2
theme = ExtResource("14_7njrs")

[node name="Buttons" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EndTurnButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 842.0
offset_top = 436.0
offset_right = 952.0
offset_bottom = 473.0
focus_mode = 0
theme = ExtResource("13_ju8jl")
theme_override_font_sizes/font_size = 20
text = "End Turn"

[node name="CookButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 153.0
offset_top = 523.0
offset_right = 188.0
offset_bottom = 558.0
focus_mode = 0
theme = ExtResource("13_ju8jl")
theme_override_font_sizes/font_size = 22

[node name="CookingIcon" type="NinePatchRect" parent="UI/Buttons/CookButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_xmbur")

[node name="RecipeButton" type="Button" parent="UI/Buttons"]
z_index = 2
layout_mode = 0
offset_left = 153.0
offset_top = 562.0
offset_right = 188.0
offset_bottom = 597.0
focus_mode = 0
theme = ExtResource("13_ju8jl")
theme_override_font_sizes/font_size = 22

[node name="RecipeIcon" type="NinePatchRect" parent="UI/Buttons/RecipeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_as1q7")

[node name="RecipeBook" parent="UI" instance=ExtResource("15_n6gaa")]
z_index = 100
layout_mode = 1

[node name="PauseMenu" type="CanvasLayer" parent="UI"]
layer = 3

[node name="PauseMenu" parent="UI/PauseMenu" node_paths=PackedStringArray("input_manager") instance=ExtResource("7_n5ix6")]
visible = false
visibility_layer = 4
z_index = 20
input_manager = NodePath("../../../Player/InputManager")

[node name="Reward" parent="UI" instance=ExtResource("21_ju8jl")]
visible = false
z_index = 20
layout_mode = 1

[node name="CardInfoLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CardInfo" parent="CardInfoLayer" instance=ExtResource("16_220ih")]
visible = false

[node name="OnLevelStart" type="Node2D" parent="." node_paths=PackedStringArray("boss_parent")]
script = ExtResource("17_k6ux7")
boss_parent = NodePath("../BattleField/Enemy")

[connection signal="pressed" from="UI/Buttons/EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="UI/Buttons/CookButton" to="CookingMechanic" method="_on_cook"]
[connection signal="pressed" from="UI/Buttons/RecipeButton" to="UI/RecipeBook" method="_on_recipe_book_button_pressed"]
